# yfantasy-api

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  examples.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
tests/: ignored_test_api_authentication.py  ignored_test_auth_service.py  test_api_authentication.py  test_api_requests.py  test_auth_service.py  test_game_api.py  test_league_api.py  test_team_api.py  test_user_api.py
tests/resources/: api_response_stub.json  existing_tokens.json  initial_tokens.json  refreshed_tokens.json
tests/resources/game/: game.json  game_weeks.json  games.json  old.json  position_types.json  roster_positions.json  stat_categories.json
tests/resources/league/: draftresults.json  meta.json  players.json  players_empty.json  players_with_draft_analysis.json  players_with_ownership.json  players_with_percent_owned.json  players_with_stats.json  scoreboard.json  scoreboard_nfl.json  settings.json  settings_nfl.json  standings.json  teams.json  transactions.json  transactions_empty.json
tests/resources/team/: matchups.json  meta.json  roster.json  roster_with_stats.json  standings.json  standings_with_divisions.json  stats.json
tests/resources/user/: games.json  (+2 more)
yahoo_api/: api.py
yfantasy_api/: __init__.py  api.py  auth.py
yfantasy_api/api/: __init__.py  api.py  auth.py  game.py  league.py  team.py  terminal.py  user.py
yfantasy_api/models/: __init__.py  common.py  game.py  helpers.py  league.py  transaction.py  user.py
yfantasy_api/tests/: test_api.py
